Fixed SonarCube errors